# doodle-jump

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Doodler.cpp  Doodler.h  Engine.cpp  Engine.h  Entity.h  EventLoop.cpp  EventLoop.h  IEntity.h  IPhysicsObject.h  KeyboardState.cpp  Platform.cpp  Platform.h  README.md  View.cpp  View.h  consts.h  main.cpp  resources.rc
docs/: Doodle Jump RoadMap.xlsx  Doodle Jump spec.docx  Doodle Jump.xmind
src/: Assets.cpp  Assets.h  Button.cpp  Button.h  Doodler.cpp  Doodler.h  Engine.cpp  Engine.h  EventLoop.cpp  EventLoop.h  GameState.cpp  GameState.h  IEntity.h  IPhysicsObject.h  IState.h  KeyboardState.cpp  KeyboardState.h  Menu.cpp  Menu.h  Overlay.cpp  Overlay.h  Platform.cpp  Platform.h  Sprite.cpp  Sprite.h  StateMediator.cpp  StateMediator.h  States.cpp  States.h  View.cpp  View.h  consts.h  enums.h  icon.h  main.cpp  opensans.h
